--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,10 +28,12 @@ dist.jar=${dist.dir}/Pidev.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.mysql-connector-java-8.0.30.jar=..\\..\\..\\..\\Downloads\\jar_files\\mysql-connector-java-8.0.30.jar
+file.reference.mysql-connector-java-8.0.30.jar-1=..\\..\\..\\Desktop\\jar_files\\mysql-connector-java-8.0.30.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-8.0.30.jar}
+    ${file.reference.mysql-connector-java-8.0.30.jar}:\
+    ${file.reference.mysql-connector-java-8.0.30.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
