--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,13 +27,17 @@ dist.dir=dist
 dist.jar=${dist.dir}/Pidev.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.jxmaps-1.3.1.jar=..\\..\\..\\..\\Downloads\\jxmaps-1.3.1\\lib\\jxmaps-1.3.1.jar
+file.reference.jxmaps-win-1.3.1.jar=..\\..\\..\\..\\Downloads\\jxmaps-1.3.1\\lib\\jxmaps-win-1.3.1.jar
 file.reference.mysql-connector-java-8.0.30.jar=..\\..\\..\\..\\Downloads\\jar_files\\mysql-connector-java-8.0.30.jar
 file.reference.mysql-connector-java-8.0.30.jar-1=..\\..\\..\\Desktop\\jar_files\\mysql-connector-java-8.0.30.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-java-8.0.30.jar}:\
-    ${file.reference.mysql-connector-java-8.0.30.jar-1}
+    ${file.reference.mysql-connector-java-8.0.30.jar-1}:\
+    ${file.reference.jxmaps-1.3.1.jar}:\
+    ${file.reference.jxmaps-win-1.3.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
